--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "mongoose": "^5.0.15"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.11"
   }
 }
